# Graph

./: .todo  README.md  pyproject.toml
.github/workflows/: autotest.yml
demo/: notes.ipynb
src/: __init__.py
src/base_objects/: __init__.py  base_objects.py  edge.py  graph.py  node.py  types.py
test/: edge_simple_test.ipynb  graph_simple_test.ipynb  node_simple_test.ipynb  test_edge.py  test_node.py
